# ray-tracing-rs

./: .gitignore  Cargo.toml
in-one-weekend/: Cargo.toml
in-one-weekend/src/: camera.rs  hit.rs  image.rs  main.rs  material.rs  ray.rs  scene.rs  shape.rs  sphere.rs
in-one-weekend/src/material/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
in-one-weekend/src/shape/: sphere.rs
in_one_weekend/: Cargo.toml
in_one_weekend/src/: camera.rs  image.rs  scene.rs
in_one_weekend/src/material/: lambertian.rs
