[package]
name = "in-one-weekend"
version = "0.1.0"
authors = ["Antony Lesage <lesage.antony@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "3", features = ["derive"] }
derive-new = "0.5"
itertools = "0.10"
nalgebra = "0.31"
png = "0.17"
rand = "0.8"
rayon = "1.0"
strum = "0.24"
strum_macros = "0.24"
